[package]
name = "krakentet"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
futures = "0.3.30"
serde = "1.0.204"
serde_derive = "1.0.204"
strum ={ version= "0.26.3", features=["strum_macros"]}
strum_macros = "0.26.4"
tokio ={ version="1.38.0", features=["full"]}
tokio-macros = "2.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
